--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #333;
-    background-image: url("../resources/background.jpeg");
+    background-image: url("../resources/background-glass.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -10,12 +10,20 @@ body {
 }
 
 .site-container {
-    background-color: #fff;
+    background-color: #f4f1e9;
     font-family: 'Lato', sans-serif;
     line-height: 1.5em;
     margin: 0 auto;
     max-width: 850px;
     padding: 3em 3em;
+    -webkit-box-shadow: 1px 0px 18px -1px #f0ebe0;
+    -moz-box-shadow: 1px 0px 18px -1px #f0ebe0;
+    box-shadow: 1px 0px 18px -1px #f0ebe0;;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 /* Header */
@@ -24,10 +32,10 @@ body {
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
     height: 150px;
-    margin-bottom: 50px;
+    margin-bottom: 0;
 }
 
-#menu-logo {
+#menu-logo img {
     height: 150px;
     width: 150px;
 }
@@ -60,7 +68,7 @@ body {
 
 /* Main */
 
-#main-container {
+main {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-gap: 3em;
@@ -68,14 +76,21 @@ body {
 
 /* Article */
 
-#article-container {
+#main-container {
     padding: 3em 2em;
     line-height: 1.8em;
 }
 
-#article-container h1,
-#article-container h2 {
+#main-container h1,
+#main-container h2,
+.summary h1 {
     font-size: 2em;
+    margin-top: 26px;
+    margin-bottom: 26px;
+}
+
+.summary a:hover {
+  color: #777;
 }
 
 .author {
@@ -142,8 +157,14 @@ body {
 
 /* Media Queries */
 
+@media only screen and (max-width: 860px) {
+    body {
+        background-image: none;
+    }
+}
+
 @media only screen and (max-width: 768px) {
-    #main-container {
+    main {
         display: block;
     }
 
@@ -152,30 +173,37 @@ body {
     }
 
     .site-container {
-        padding: 3em 0.5em;
+        padding: 1em 0.5em;
     }
 
     #header-container {
-        grid-template-columns: 1fr;
-        grid-auto-rows: 2;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 2fr 1fr;
+        grid-template-areas:
+          ". a a ."
+          "b b c c";
         height: auto;
         margin: 0;
     }
 
     #menu-logo {
-        order: 1;
-        display: block;
-        margin: 10px auto;
+        grid-area: a;
+        margin: auto;
+        display: inline;
     }
 
     #menu-left {
-        order: 2;
+        grid-area: b;
         margin: 0;
     }
 
     #menu-right {
-        order: 3;
+        grid-area: c;
         margin: 0;
-        border-top: 0;
+    }
+
+    #widget-container {
+      padding-left: 30px;
+      padding-right: 30px;
     }
 }
