--- a/styles/style.css
+++ b/styles/style.css
@@ -117,7 +117,7 @@ main {
 .widget-header {
     background-color: #000;
     color: #fff;
-    width: fit-content;
+    width: 91px;
     padding: 10px 20px;
     margin: auto;
     margin-top: -22px;
