--- a/styles/style.css
+++ b/styles/style.css
@@ -26,9 +26,9 @@ a {
   color: inherit;
 }
 
-/* Header */
+/* Navbar */
 
-#header-container {
+#nav-container {
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
     height: 150px;
@@ -101,6 +101,12 @@ main {
 .article-image {
     max-width: 100%;
     padding: .7em 0em;
+}
+
+#portrait {
+  max-width: 50%;
+  float: left;
+  margin-right: 30px;
 }
 
 /* Widget Sidebar */
@@ -205,5 +211,11 @@ main {
     #widget-container {
       padding-left: 30px;
       padding-right: 30px;
+    }
+
+    #portrait {
+      max-width: 100%;
+      float: none;
+      margin-right: 0;
     }
 }
