--- a/styles/style.css
+++ b/styles/style.css
@@ -182,7 +182,7 @@ main {
         padding: 1em 0.5em;
     }
 
-    #header-container {
+    #nav-container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 2fr 1fr;
         grid-template-areas:
